Various fixes and tweaks
Fixed - tag autocomplete not being styled correctly
Tweaked - re621 dialogue close button being cramped
Tweaked - sticky search now has a background that fades to transparent, hopefully increasing readability

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        2.3.6
+@version        2.3.7
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @preprocessor stylus
@@ -1862,6 +1862,21 @@ if themep == classic {
 	span.ui-dialog-title {
 		color: var(--base-text) !important;
 	}
+	button.ui-dialog-titlebar-close {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: 1fr;
+		grid-column-gap: 0px;
+		grid-row-gap: 0px; 
+		align-items:center;
+		width: 4em !important;
+		& span {
+			margin:auto;
+		}
+		& span:nth-child(2) {
+			display:none !important;
+		}
+	}
 	div.re621-ui-dialog a.delete-link {
 		background-color: var(--mode-remove-fav) !important;
 	}
@@ -1908,11 +1923,16 @@ if themep == classic {
 		border-radius: 2px 8px 8px 8px;
 		overflow:hidden;
 	}
-	ul.ui-autocomplete li:hover *, .ui-state-active,  {
+	.ui-autocomplete-dropdown {
+		background: var(--bg-400) !important;
+		border: 1px solid var(--bg-300) !important;
+		border-radius: 0px 3px 3px 3px;
+	}
+	ul.ui-autocomplete-dropdown *:hover, .ui-state-active,  {
 		border: none;
 		background-color: var(--bg)!important;
 	}
-	.ui-autocomplete .autocomplete-arrow {
+	.ui-autocomplete-dropdown .autocomplete-arrow {
 		color: var(--base-text-faded)!important;
 	}
 	.ui-widget-content {
@@ -2007,6 +2027,27 @@ if themep == classic {
 	.post-index .search {
 		background: none !important;
 		box-shadow: none !important;
+		isolation: isolate;
+		&::before {
+			content: '';
+			width: 110%;
+			height: 90%;
+			right: 0%;
+			position: absolute;
+			background-color: var(--bg-300);
+			top: -5%;
+			z-index: -1;
+			}
+		&::after {
+			z-index: -2;
+			content: '';
+			position:absolute;
+			bottom: -15%;
+			width: 110%;
+			height: 30%;
+			right: 0%;
+			background: linear-gradient(180deg, var(--bg-300) 0%, rgba(0, 0, 0, 0) 100%);
+		}
 	}
 	div#page aside#sidebar section.post-search form, div#page aside#sidebar section#re621-insearch form, div#page aside#sidebar section#mode-box form {
 		display:flex;
@@ -5578,11 +5619,11 @@ if themep == classic {
 		border-radius: 2px 8px 8px 8px;
 		overflow:hidden;
 	}
-	ul.ui-autocomplete li:hover * {
+	ul.ui-autocomplete-dropdown *:hover {
 		border: none;
 		background-color: var(--bg)!important;
 	}
-	.ui-autocomplete .autocomplete-arrow {
+	.ui-autocomplete-dropdown .autocomplete-arrow {
 		color: var(--base-text-faded)!important;
 	}
 	.ui-widget-content {
